# Sinfar-NWNX

./: .gitignore
nwn_tools/C2da/: C2da.cpp  C2da.h
nwn_tools/CERF/: CERF.cpp  CERF.h  CMakeLists.txt
nwn_tools/CKey/: CKey.cpp  CKey.h  CMakeLists.txt
nwn_tools/CKey/extract_key_src/: extract_key.cpp
nwn_tools/CKey/test/: main.cpp
nwn_tools/GFF/: GFF.cpp  GFF.h  GFFExoLocString.cpp  GFFExoLocString.h  GFFField.cpp  GFFField.h  GFFList.cpp  GFFList.h  GFFStruct.cpp  GFFStruct.h  quick_read_gff.cpp  quick_read_gff.h
nwncx/: nwncx.cpp  nwncx.h
nwncx/ini/: IniFile.cpp  IniFile.h
nwncx/sinfar/: CXImage.cpp  CXImage.h  DXTC.h  decompress_DXTC.cpp  nwncx_sinfar.cpp  nwncx_sinfar.h  pch.h  resman.cpp  resman.h
nwncx_linux/: CMakeLists.txt
nwncx_linux/nwncx_core/: NWNCXBase.h  nwncx_core.cpp  utils.cpp  utils.h
nwncx_linux/nwncx_sinfar/: NWNCXSinfar.cpp  NWNCXSinfar.h
nwncx_win/: NWNCX.sln  NWNCX_VC2010Express.sln
nwncx_win/NWN Launcher Lib/: NWN Launcher Lib.vcxproj  NWN Launcher Lib.vcxproj.filters  NWNLauncherLib.cpp  NWNLauncherLib.h
nwncx_win/Sinfar NWN Launcher/: Sinfar NWN Launcher.vcxproj  Sinfar NWN Launcher.vcxproj.filters  main.cpp  sinfarx_file_map.h
nwnx/: CMakeLists.txt
nwnx/sinfarx/: CMakeLists.txt  ai.cpp  ai.h  area.cpp  area.h  cached2da.cpp  cached2da.h  chat.cpp  chat.h  combat.cpp  combat_stat.cpp  core.cpp  core.h  cpp_utils.cpp  cpp_utils.h  craft_pp_cost.cpp  craft_pp_cost.h  crashfix.cpp  creature.cpp  creature.h  crypto.h  cstmfac.cpp  cstmfac.h  dialog.cpp  dialog.h  dmactions.cpp  effect.cpp  elc.cpp  elc.h  encounter.cpp  erf.cpp  erf.h  events.cpp  extra_stats.cpp  feat.cpp  fixes.cpp  item.cpp  level40bonus.cpp  limit.cpp  log.cpp  (+38 more)
nwnx/sinfarx/nwscript_funcs/: ai.cpp  aoe.cpp  area.cpp  campaign.cpp  creature.cpp  dialog.cpp  door.cpp  effect.cpp  gff.cpp  hash.cpp  hex.cpp  item.cpp  local_vars.cpp  module.cpp  nwscript_funcs.h  object.cpp  placeable.cpp  player.cpp  quick_button.cpp  rules.cpp  store.cpp  system.cpp  trigger.cpp  utils.cpp  varevents.cpp
(+47 files in other folders)
